| Summary: | ASTERISK-25282: rtptimeout does not kick in because of zero sized frames (lost packets) | ||||
| Reporter: | Kelvin (kelchy) | Labels: | |||
| Date Opened: | 2015-07-28 04:41:48 | Date Closed: | 2015-08-03 08:56:09 | ||
| Priority: | Trivial | Regression? | Yes | ||
| Status: | Closed/Complete | Components: | Channels/chan_sip/General | ||
| Versions: | 13.4.0 | Frequency of Occurrence | Constant | ||
| Related Issues: |
| ||||
| Environment: | ubuntu 14.04 64bit on digital ocean | Attachments: | |||
| Description: | rtptimeout never work.
zero sized frames are setting lastrtprx | ||||
| Comments: | By: Asterisk Team (asteriskteam) 2015-07-28 04:41:48.907-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2015-07-28 09:34:39.837-0500 Thank you for taking the time to report this bug and helping to make Asterisk better. Unfortunately, we cannot work on this bug because your description did not include enough information. Please read over the Asterisk Issue Guidelines [1] which discusses the information necessary for your issue to be resolved and the format that information needs to be in. We would be grateful if you would then provide a more complete description of the problem. At a minimum, we need: 1. The specific steps or actions you took that caused you to encounter the problem. 2. The behavior you expected and the location of documentation that led you to that expectation. 3. The behavior you actually encountered. To demonstrate the issue in detail, please include Asterisk log files generated per the instructions on the wiki [2]. If applicable, please ensure that protocol-level trace debugging is enabled, e.g., 'sip set debug on' if the issue involves chan_sip, and configuration information such as dialplan and channel configuration. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines [2] https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: Kelvin (kelchy) 2015-07-29 06:05:42.800-0500 Hi Rusty, I already submitted a fix for review https://gerrit.asterisk.org/#/c/981/ 1. setup a call, disconnect network on one leg. hangup while disconnected. wait until the other leg hang up due to rtptimeout. 2. expect the other leg to hangup after 30seconds if rtptimeout=30 3. call will go on forever i put a log on the line before p->lastrtprx = time(NULL); line 8419 to show the packet size and which call leg (caller or callee) after i disconnect the network, i still see packets coming in with zero length. please take note that i have jitter buffer turned on By: Rusty Newton (rnewton) 2015-07-30 13:40:42.491-0500 Thanks for the additional information, but I still find this ambiguous (from a user perspective and ability to reproduce). " setup a call" doesn't mean much. What kind of call? What was on both ends? What is happening? is there transcoding or not? Is it connected to an application in one way or another? 1. Provide the previously mentioned debug log of an example call. Be sure to include VERBOSE, DEBUG and "rtp set debug on". 2. Provide dialplan , extensions.conf and sip.conf to demonstrate what configuration is necessary to reproduce the issue. 3. Describe steps again but using your demonstrated sip peers, dialplan and log. Thanks! By: Kelvin (kelchy) 2015-08-03 01:41:08.946-0500 rusty, let's close this ticket as our experience varied from server to server, some worked while some didn't. we will have to investigate further | ||||