channels/chan_sip: Fix rtptimeout

RTP timeout should hangup the call when asterisk
stops receiving rtp on a leg. Because sip_read()
process lost packets as zero sized packets,
lastrtprx always gets updated thus will never
timeout at all. This fix solves the problem by
updating only nonzero packets.

ASTERISK-25282

Change-Id: I2650224ee99df87c102c58fcb54ffae383d0c8c3